--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="C:\Users\Devil\Desktop\Web\Images\Photograph_Crop.png" alt="Ritesh's Profile Picture">
+                <img src="Photograph_Crop.png" alt="Ritesh's Profile Picture">
             </td>
             <td>
                 <h1>Ritesh Kumar</h1>
